public class Agriculteur extends Utilisateur {
    public Agriculteur(int id, String nom, String email, String motDePasse) {
        super(id, nom, email, motDePasse);
    }
}
