@startuml
class Utilisateur {
  - id : int
  - nom : String
  - email : String
  - motDePasse : String
  + sAuthentifier()
  + sInscrire()
}

class Client {
  + consulterCatalogue()
  + rechercherProduit()
  + passerCommande()
}

class Agriculteur {
  + ajouterProduit()
  + modifierProduit()
  + supprimerProduit()
}

class Admin {
  + gererUtilisateurs()
  + consulterStatistiques()
}

class Produit {
  - idProduit : int
  - nom : String
  - prix : double
  - quantite : int
  - categorie : String
  + Produit(idProduit, nom, prix, quantite, categorie)
  + getIdProduit()
  + getNom()
  + getPrix()
  + getQuantite()
  + getCategorie()
  + setNom(nom)
  + setPrix(prix)
  + setQuantite(quantite)
  + setCategorie(categorie)
  + toString()
}

class GestionProduit {
  - listeProduits : List<Produit>
  - compteurId : int
  + ajouter(nom, prix, quantite, categorie)
  + modifier(idProduit, nom, prix, quantite, categorie)
  + modifierNom(idProduit, nouveauNom)
  + modifierPrix(idProduit, nouveauPrix)
  + modifierQuantite(idProduit, nouvelleQuantite)
  + supprimer(idProduit)
  + afficher()
  + afficherProduit(idProduit)
  + afficherParNom(nom)
  + afficherParCategorie(categorie)
  + afficherParNomEtCategorie(nom, categorie)
  + getNombreProduits()
  + getListeProduits()
}

class Commande {
  - idCommande : int
  - date : Date
  - total : double
  + calculerTotal()
}

class LigneCommande {
  - quantite : int
}

class Catalogue {
  + afficherCatalogue()
  + rechercherProduit()
}

class Livraison {
  - statut : String
  + mettreAJourStatut()
}

' Héritage
Utilisateur <|-- Client : hérite
Utilisateur <|-- Agriculteur : hérite
Utilisateur <|-- Admin : hérite

' Relations
Client "1" -- "0..*" Commande : passe
Commande "1" -- "1.." LigneCommande : contient
LigneCommande --> Produit : concerne
Agriculteur "1" -- "1" GestionProduit : utilise
GestionProduit "1" -- "0..*" Produit : gère
Catalogue o-- Produit : contient
Admin -- Utilisateur : gère
Commande -- Livraison : possède

' ===== Répartition des membres =====

note top of Utilisateur
Ahlem
US1 Inscription
US2 Connexion
end note

note top of Produit
Melak
US3 Ajouter produit
US4 Modifier/Supprimer
end note

note top of Catalogue
Rahma
US5 Catalogue
US6 Recherche
end note

note top of Commande
Rihab
US7 Commande
US8 Livraison
end note

note top of Admin
Wael
US9 Gestion utilisateurs
US10 Statistiques
end note
@enduml